InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/vlocity_ins__Drug__c.object-meta.xml
<CustomObject>
    <description>A prescription or over the counter (OTC) medicine. This object is designed to accept data loaded from a validated external source such as the US FDA&apos;s National Drug Code Directory.</description>
    <label>Drug</label>
    <nameField>
        <label>Drug Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>