InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/fields/vlocity_ins__DosageUnit__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DosageUnit__c</fullName>
    <label>Dosage Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>