InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/fields/vlocity_ins__DrugStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DrugStatus__c</fullName>
    <label>Drug Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prescription</fullName>
            </value>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>