InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/fields/vlocity_ins__ImprintCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ImprintCode__c</fullName>
    <label>Imprint Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>