InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/fields/vlocity_ins__IsCombinationDrug__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsCombinationDrug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Combination Drug</label>
    <type>Checkbox</type>
</CustomField>