InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/fields/vlocity_ins__IsPregnancySafe__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsPregnancySafe__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Pregnancy Safe</label>
    <type>Checkbox</type>
</CustomField>