InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/fields/vlocity_ins__IsProtectedClass__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsProtectedClass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protected Class</label>
    <type>Checkbox</type>
</CustomField>