InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/fields/vlocity_ins__MarketingStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MarketingStartDate__c</fullName>
    <label>Marketing Start Date</label>
    <type>Date</type>
</CustomField>