InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/fields/vlocity_ins__Method__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Method__c</fullName>
    <description>A method, or route, of administration is the way the drug is taken into the body. Methods are usually classified by the location where the substance is applied, such as orally or intravenously.</description>
    <inlineHelpText>A method, or route, of administration is the way the drug is taken into the body. Methods are usually classified by the location where the substance is applied, such as orally or intravenously.</inlineHelpText>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buccal mucosa</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Epidural</fullName>
            </value>
            <value>
                <fullName>Gingival</fullName>
            </value>
            <value>
                <fullName>Implantation</fullName>
            </value>
            <value>
                <fullName>Inhalation</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Intracavernosal</fullName>
            </value>
            <value>
                <fullName>Intradermal</fullName>
            </value>
            <value>
                <fullName>Intramuscular</fullName>
            </value>
            <value>
                <fullName>Intraocular</fullName>
            </value>
            <value>
                <fullName>Intrapleural</fullName>
            </value>
            <value>
                <fullName>Intrathecal</fullName>
            </value>
            <value>
                <fullName>Intratracheal</fullName>
            </value>
            <value>
                <fullName>Intratympanic</fullName>
            </value>
            <value>
                <fullName>Intrauterine</fullName>
            </value>
            <value>
                <fullName>Intravenous</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Multiple Routes</fullName>
            </value>
            <value>
                <fullName>Nasal</fullName>
            </value>
            <value>
                <fullName>Ophthalmic</fullName>
            </value>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>Oromucosal</fullName>
            </value>
            <value>
                <fullName>Otic</fullName>
            </value>
            <value>
                <fullName>Rectal</fullName>
            </value>
            <value>
                <fullName>Subcutaneous</fullName>
            </value>
            <value>
                <fullName>Sublingual</fullName>
            </value>
            <value>
                <fullName>Topical application</fullName>
            </value>
            <value>
                <fullName>Transdermal</fullName>
            </value>
            <value>
                <fullName>Urethral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>