InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/fields/vlocity_ins__NationalDrugCode__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__NationalDrugCode__c</fullName>
    <description>The NDC, or National Drug Code, is a unique 10-digit, 3-segment number. It is a universal product identifier for human drugs in the United States. The code is present on all nonprescription (OTC) and prescription medication packages and inserts in the US. This field is a unique record identifier from an external system. Duplicate values are not allowed.</description>
    <externalId>true</externalId>
    <inlineHelpText>The NDC, or National Drug Code, is a unique 10-digit, 3-segment number. It is a universal product identifier for human drugs in the United States. The code is present on all nonprescription (OTC) and prescription medication packages and inserts in the US.</inlineHelpText>
    <label>National Drug Code</label>
    <length>13</length>
    <type>Text</type>
</CustomField>