InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/fields/vlocity_ins__RXCUINumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RXCUINumber__c</fullName>
    <description>RxNorm concept unique identifier (RXCUI):RxNorm is a normalized naming system created by National Library of Medicine for generic and branded drugs and a tool for supporting semantic interoperation between drug terminologies and pharmacy knowledge base systems. This field is a unique record identifier from an external system. Duplicate values are not allowed.</description>
    <inlineHelpText>RxNorm concept unique identifier</inlineHelpText>
    <label>RXCUI Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>