InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/fields/vlocity_ins__SubstanceNameList__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SubstanceNameList__c</fullName>
    <label>Substance Name List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>