InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/fields/vlocity_ins__UnitOfMeasurement__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__UnitOfMeasurement__c</fullName>
    <description>The Dosage can be expressed in Units, such as the weight of drug (e.g. 250 mg), volume of drug solution (e.g. 10 mL, 2 drops), the number of dosage forms (e.g. 1 capsule, 1 suppository) or some other quantity (e.g. 2 puffs).</description>
    <inlineHelpText>The Dosage can be expressed in Units, such as the weight of drug (e.g. 250 mg), volume of drug solution (e.g. 10 mL, 2 drops), the number of dosage forms (e.g. 1 capsule, 1 suppository) or some other quantity (e.g. 2 puffs).</inlineHelpText>
    <label>Unit of Measure (UOM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>Amb</fullName>
            </value>
            <value>
                <fullName>BAU</fullName>
            </value>
            <value>
                <fullName>CELLS/ML</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>MCI/ML</fullName>
            </value>
            <value>
                <fullName>MEQ</fullName>
            </value>
            <value>
                <fullName>MEQ/MG</fullName>
            </value>
            <value>
                <fullName>MEQ/ML</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>MG/ACTUAT</fullName>
            </value>
            <value>
                <fullName>MG/HR</fullName>
            </value>
            <value>
                <fullName>MG/MG</fullName>
            </value>
            <value>
                <fullName>MG/ML</fullName>
            </value>
            <value>
                <fullName>MG/SQCM</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>ML/ML</fullName>
            </value>
            <value>
                <fullName>UNT</fullName>
            </value>
            <value>
                <fullName>UNT/MG</fullName>
            </value>
            <value>
                <fullName>UNT/ML</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Buccal mucosa</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Epidural</fullName>
            </value>
            <value>
                <fullName>Gingival</fullName>
            </value>
            <value>
                <fullName>Implantation</fullName>
            </value>
            <value>
                <fullName>Inhalation</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Intracavernosal</fullName>
            </value>
            <value>
                <fullName>Intradermal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>