InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/listViews/vlocity_ins__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ins__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ins__RXCUINumber__c</columns>
    <columns>vlocity_ins__Method__c</columns>
    <columns>vlocity_ins__UnitOfMeasurement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Drugs</label>
</ListView>