InsuranceOrg/force-app/main/default/objects/vlocity_ins__Drug__c/listViews/vlocity_ins__StepTherapy.listView-meta.xml
<ListView>
    <fullName>vlocity_ins__StepTherapy</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Drugs (with Step Therapy)</label>
</ListView>